@@ -1,25 +1,5 @@
 package com.client.controller.dashboard;
 
-import com.client.network.AuctionNetwork;
-import com.client.network.ItemNetwork;
-import com.client.util.DashboardNavigation;
-import com.client.util.DashboardSearchBridge;
-import com.shared.dto.AuctionDetailDTO;
-import com.shared.dto.ItemResponseDTO;
-import javafx.application.Platform;
-import javafx.concurrent.Task;
-import javafx.fxml.FXML;
-import javafx.geometry.Insets;
-import javafx.geometry.Pos;
-import javafx.scene.control.*;
-import javafx.scene.image.Image;
-import javafx.scene.image.ImageView;
-import javafx.scene.layout.FlowPane;
-import javafx.scene.layout.HBox;
-import javafx.scene.layout.VBox;
-import javafx.scene.text.Font;
-import javafx.scene.text.FontWeight;
-
 import java.io.InputStream;
 import java.math.BigDecimal;
 import java.text.NumberFormat;
@@ -29,6 +9,32 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
+
+import com.client.network.AuctionNetwork;
+import com.client.network.ItemNetwork;
+import com.client.util.DashboardNavigation;
+import com.client.util.DashboardSearchBridge;
+import com.shared.dto.AuctionDetailDTO;
+import com.shared.dto.ItemResponseDTO;
+
+import javafx.application.Platform;
+import javafx.fxml.FXML;
+import javafx.geometry.Insets;
+import javafx.geometry.Pos;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
+import javafx.scene.control.CheckBox;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.Label;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.control.TextField;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
+import javafx.scene.layout.FlowPane;
+import javafx.scene.layout.HBox;
+import javafx.scene.layout.VBox;
+import javafx.scene.text.Font;
+import javafx.scene.text.FontWeight;
 
 /**
  * Dashboard: dữ liệu từ {@link ItemNetwork} → {@code GET /api/items} (ItemService / ItemResponseDTO).
@@ -123,8 +129,8 @@ public class ViewDashboardController {
     private void loadAuctionsFromServer() {
         new Thread(() -> {
             try {
-                List<AuctionDetailDTO> liveAuctions = auctionNetwork.getActiveAuctions();
-                List<AuctionDetailDTO> upcomingAuctions = auctionNetwork.getUpcomingAuctions();
+                List<AuctionDetailDTO> liveAuctions = AuctionNetwork.getActiveAuctions();
+                List<AuctionDetailDTO> upcomingAuctions = AuctionNetwork.getUpcomingAuctions();
 
                 Platform.runLater(() -> {
                     if (mainScrollPane == null) return;
@@ -230,7 +236,7 @@ public class ViewDashboardController {
     }
 
     private String formatCurrency(double amount) {
-        NumberFormat currencyFormatter = NumberFormat.getCurrencyInstance(new Locale("vi", "VN"));
+        NumberFormat currencyFormatter = NumberFormat.getCurrencyInstance(Locale.of("vi", "VN"));
         return currencyFormatter.format(amount);
     }
 
